# edcast2_jack

./: Makefile.am  README  autogen.sh  edcast.cpp
conf/: sample.cfg
libedcast/: Makefile.am  Socket.cpp  libedcast.cpp  libedcast.h  libedcast_socket.h
